[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Fonts/OpenSans-22.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/Fonts/OpenSans-48.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/MainMenu/FoodPreference.gd" type="Script" id=3]

[node name="Panel" type="Panel"]
margin_right = 320.0
margin_bottom = 432.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 321.0
margin_bottom = 73.0
custom_fonts/font = ExtResource( 2 )
text = "Food Pref."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VeganLabel" type="RichTextLabel" parent="."]
margin_left = 34.0
margin_top = 222.0
margin_right = 320.0
margin_bottom = 261.0
custom_fonts/normal_font = ExtResource( 1 )
text = "Vegan"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VeganCheck" type="CheckBox" parent="."]
margin_left = 5.74915
margin_top = 209.109
margin_right = 29.7492
margin_bottom = 265.109
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CarnivoreLabel" type="RichTextLabel" parent="."]
margin_left = 34.0
margin_top = 156.0
margin_right = 321.0
margin_bottom = 199.932
custom_fonts/normal_font = ExtResource( 1 )
text = "Carnivore"

[node name="CarnivoreCheck" type="CheckBox" parent="."]
margin_left = 5.0
margin_top = 143.932
margin_right = 29.0
margin_bottom = 199.932

[node name="OmnivoreLabel" type="RichTextLabel" parent="."]
margin_left = 31.0
margin_top = 96.0
margin_right = 321.0
margin_bottom = 140.0
custom_fonts/normal_font = ExtResource( 1 )
text = "Omnivore"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OmnivoreCheck" type="CheckBox" parent="."]
margin_left = 5.0
margin_top = 84.0
margin_right = 29.0
margin_bottom = 140.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ApplyPreferences" type="Button" parent="."]
margin_top = 338.0
margin_right = 319.0
margin_bottom = 432.0
custom_fonts/font = ExtResource( 2 )
text = "Apply"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VeganCheck" to="." method="_on_VeganCheck_pressed"]
[connection signal="pressed" from="CarnivoreCheck" to="." method="_on_CarnivoreCheck_pressed"]
[connection signal="pressed" from="OmnivoreCheck" to="." method="_on_OmnivoreCheck_pressed"]
[connection signal="pressed" from="ApplyPreferences" to="." method="_on_ApplyPreferences_pressed"]
